fixed gamepad dark mode icon issue

--- a/src/HeroPage.css
+++ b/src/HeroPage.css
@@ -41,7 +41,7 @@ a:hover {
 }
 
 .container {
-    max-width: 900px;    
+    max-width: 870px;    
     padding: 50px;
     color: black;
     background-color: white;
@@ -86,7 +86,7 @@ a:hover {
     font-size: 30px; 
     cursor: pointer;
     color: inherit; 
-    transition: color 0.3s;
+    transition: color 0.2s;
 }
 
 .dark-mode-toggle-container {
@@ -117,6 +117,10 @@ a:hover {
 
 .container.dark-mode .dark-mode-toggle i.fa-sun {
     color: white;
+}
+
+.container.dark-mode .dark-mode-toggle i.fa-sun:hover {
+    color: #bee1ff;
 }
 
 .container.dark-mode .game-pad-toggle i.fa-gamepad {
@@ -226,5 +230,11 @@ a:hover {
     }
 }
 
+.dark-mode-toggle:hover {
+    font-weight: 900;
+    color: #77bdfb;
+}
 
-
+.dark-mode-toggle:hover i {
+    color: inherit;
+}
